--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -25,3 +25,12 @@ input {
   margin-bottom: 10px;
   border-radius: 50px;
 }
+
+.card img {
+  height: 260px;
+}
+
+.detailImage {
+  max-height: 540px;
+  max-width: 1000px;
+}
